--- a/package.json
+++ b/package.json
@@ -1,5 +1,6 @@
 {
   "name": "trustmap-ui",
+  "homepage": "http://JarlMartinez.github.io/trustmap-ui",
   "version": "0.1.0",
   "private": true,
   "dependencies": {
